test(LottoResult): 당첨 통계 계산 기능을 테스트하는 코드 추가